add deployment doc

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,60 @@
-# Dexcom 账号信息
-DEXCOM_USERNAME=你的用户名或邮箱或手机号
-DEXCOM_PASSWORD=你的密码
+# ====================================================
+# 血糖 PK 应用配置文件
+# ====================================================
+# 复制此文件为 .env 并填入真实值
+# .env 文件不应提交到 git！
+# ====================================================
 
-# 区域设置
-# us = 美国
-# ous = 美国以外
-# jp = 日本
-DEXCOM_REGION=us
+# ==================== 加密密钥（可选）====================
+# 如果设置了此变量，将使用它作为加密密钥（方便云部署/Docker）
+# 不设置则使用 .secret_key 文件
+# 获取密钥：cat .secret_key
+# ENCRYPTION_KEY=你的密钥字符串
+
+# ==================== 用户配置 ====================
+# 格式: USER_<ID>_<字段>=值
+# 每个用户需要: NAME, USERNAME, PASSWORD_ENCRYPTED, REGION, AVATAR, COLOR
+
+# --- 用户 1 ---
+USER_1_NAME=四香油饼
+USER_1_USERNAME=your_dexcom_username_1
+USER_1_PASSWORD_ENCRYPTED=加密后的密码（运行 python crypto_utils.py 生成）
+USER_1_REGION=ous
+USER_1_AVATAR=images/avatar1.svg
+USER_1_COLOR=#0077BB
+
+# --- 用户 2 ---
+USER_2_NAME=UB
+USER_2_USERNAME=your_dexcom_username_2
+USER_2_PASSWORD_ENCRYPTED=加密后的密码
+USER_2_REGION=ous
+USER_2_AVATAR=images/avatar2.svg
+USER_2_COLOR=#EE7733
+
+# --- 用户 3 (示例，取消注释使用) ---
+# USER_3_NAME=小刚
+# USER_3_USERNAME=your_dexcom_username_3
+# USER_3_PASSWORD_ENCRYPTED=加密后的密码
+# USER_3_REGION=us
+# USER_3_AVATAR=images/avatar3.png
+# USER_3_COLOR=#009988
+
+# ==================== 应用配置 ====================
+# Flask 配置
+FLASK_PORT=5010
+FLASK_DEBUG=false
+FLASK_SECRET_KEY=请生成一个随机字符串
+
+# 数据刷新间隔（秒）
+DATA_REFRESH_INTERVAL=30
+
+# ==================== Passkey 认证配置 ====================
+# 是否启用认证（设为 false 可关闭，方便本地开发）
+AUTH_REQUIRED=true
+
+# Passkey 域名配置（部署到公网时需要修改）
+# RP_ID: 你的域名，不含协议和端口，如 example.com
+# ORIGIN: 完整 URL，含协议，如 https://example.com
+PASSKEY_RP_ID=localhost
+PASSKEY_RP_NAME=血糖PK
+PASSKEY_ORIGIN=http://localhost:5010
