fix passkey and danmaku

--- a/env.example
+++ b/env.example
@@ -34,6 +34,9 @@ USER_2_COLOR=#EE7733
 FLASK_PORT=5010
 FLASK_DEBUG=false
 
+# 登录后的默认页面
+DEFAULT_PAGE=/river.html
+
 # ==================== Passkey 认证配置 ====================
 # 是否启用认证（设为 false 可关闭，方便本地开发）
 AUTH_REQUIRED=true
