--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,49 @@
-# 环境变量（包含密码）
+# ==================== 敏感文件 ====================
+# 环境配置（包含密码）
 .env
 
-# Python 虚拟环境
-venv/
-.venv/
+# 加密密钥
+.secret_key
 
-# Python 缓存
+# Passkey 用户数据
+.passkey_users.json
+
+# ==================== Python ====================
 __pycache__/
 *.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# IDE
-.vscode/
+# 虚拟环境
+venv/
+ENV/
+env/
+.venv/
+
+# ==================== IDE ====================
 .idea/
-
-# 系统文件
+.vscode/
+*.swp
+*.swo
+*~
 .DS_Store
 
-*.bak
+# ==================== 日志 ====================
+*.log
+logs/
