fix passkey and danmaku

--- a/env.example
+++ b/env.example
@@ -13,14 +13,14 @@
 USER_1_NAME=四香油饼
 USER_1_USERNAME=your_dexcom_username_1
 USER_1_REGION=ous
-USER_1_AVATAR=images/avatar1.svg
+USER_1_AVATAR=images/coffeecookie.png
 USER_1_COLOR=#0077BB
 
 # --- 用户 2 ---
 USER_2_NAME=UB
 USER_2_USERNAME=your_dexcom_username_2
 USER_2_REGION=ous
-USER_2_AVATAR=images/avatar2.svg
+USER_2_AVATAR=images/yellowduck.png
 USER_2_COLOR=#EE7733
 
 # --- 用户 3 (示例，取消注释使用) ---
