update env file

--- a/env.example
+++ b/env.example
@@ -10,14 +10,14 @@
 # 运行: python password_manager.py set user1
 
 # --- 用户 1 ---
-USER_1_NAME=四香油饼
+USER_1_NAME=user1
 USER_1_USERNAME=your_dexcom_username_1
 USER_1_REGION=ous
 USER_1_AVATAR=images/coffeecookie.png
 USER_1_COLOR=#0077BB
 
 # --- 用户 2 ---
-USER_2_NAME=UB
+USER_2_NAME=user2
 USER_2_USERNAME=your_dexcom_username_2
 USER_2_REGION=ous
 USER_2_AVATAR=images/yellowduck.png
