--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,10 @@ pydexcom>=0.3.0
 webauthn==2.7.0
 
 # 密码加密 - webauthn 2.7.0 需要 cryptography>=43.0.0
-cryptography>=43.0.3,<44.0.0
+cryptography>=43.0.3
 
 # 系统 Keyring 存储（Mac/Windows 自动可用，Linux 服务器会自动回退到加密文件）
 keyring>=24.0.0,<25.0.0
+
+# Libre API
+pylibrelinkup
