update readme and deployment doc; folder cleanup

--- a/env.example
+++ b/env.example
@@ -5,45 +5,32 @@
 # .env 文件不应提交到 git！
 # ====================================================
 
-# ==================== 用户配置 ====================
-# 密码通过 password_manager.py 设置，不需要写在这里
-# 运行: python password_manager.py set user1
-
-# --- 用户 1 ---
-USER_1_NAME=user1
-USER_1_USERNAME=your_dexcom_username_1
-USER_1_REGION=ous
-USER_1_AVATAR=images/coffeecookie.png
-USER_1_COLOR=#0077BB
-
-# --- 用户 2 ---
-USER_2_NAME=user2
-USER_2_USERNAME=your_dexcom_username_2
-USER_2_REGION=ous
-USER_2_AVATAR=images/yellowduck.png
-USER_2_COLOR=#EE7733
-
-# --- 用户 3 (示例，取消注释使用) ---
-# USER_3_NAME=小刚
-# USER_3_USERNAME=your_dexcom_username_3
-# USER_3_REGION=us
-# USER_3_AVATAR=images/avatar3.png
-# USER_3_COLOR=#009988
-
-# ==================== 应用配置 ====================
+# ==================== Flask 配置 ====================
+FLASK_SECRET_KEY=your-random-secret-key-here
 FLASK_PORT=5010
 FLASK_DEBUG=false
 
-# 登录后的默认页面
-DEFAULT_PAGE=/river.html
-
-# ==================== Passkey 认证配置 ====================
-# 是否启用认证（设为 false 可关闭，方便本地开发）
-AUTH_REQUIRED=true
-
-# Passkey 域名配置（部署到公网时需要修改）
-# RP_ID: 你的域名，不含协议和端口，如 example.com
-# ORIGIN: 完整 URL，含协议，如 https://example.com
+# ==================== Passkey 配置 ====================
+# 本地开发
 PASSKEY_RP_ID=localhost
 PASSKEY_RP_NAME=血糖PK
 PASSKEY_ORIGIN=http://localhost:5010
+
+# 生产环境（部署时修改）
+# PASSKEY_RP_ID=your-domain.com
+# PASSKEY_ORIGIN=https://your-domain.com
+
+# ==================== 认证配置 ====================
+# 设为 false 可跳过登录（仅开发用）
+AUTH_REQUIRED=true
+
+# ==================== 加密密钥 ====================
+# 用于加密 CGM 设备凭证（可选，不设置则自动生成）
+# ENCRYPTION_KEY=your-fernet-key
+
+# ==================== 游戏配置 ====================
+# 默认首页
+DEFAULT_PAGE=/river.html
+
+# 数据刷新间隔（秒）
+DATA_REFRESH_INTERVAL=30
